# ChangeLog for media-sound/muine
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/ChangeLog,v 1.18 2005/05/25 15:21:31 latexer Exp $

  25 May 2005; Peter Johanson <latexer@gentoo.org> muine-0.6.3-r2.ebuild,
  muine-0.6.3-r3.ebuild, muine-0.8.2.ebuild, muine-0.8.3.ebuild:
  Add dep on new enough intltool. See bug #93705.

*muine-0.8.3 (06 May 2005)

  06 May 2005; Peter Johanson <latexer@gentoo.org> +muine-0.8.3.ebuild:
  Bump.

  19 Apr 2005; <zaheerm@gentoo.org> metadata.xml, muine-0.6.3-r2.ebuild,
  muine-0.6.3-r3.ebuild, muine-0.8.2.ebuild:
  Replaced deprecated oggvorbis use flag with vorbis use flag and made 
  sure ogg gstreamer plugin is depped on

  07 Apr 2005; Peter Johanson <latexer@gentoo.org> muine-0.8.2.ebuild:
  Add check and warning about dbus being built with the mono USE flag.

  04 Apr 2005; <zaheerm@gentoo.org> muine-0.8.2.ebuild:
  updated the gstreamer deps

*muine-0.8.2 (02 Apr 2005)

  02 Apr 2005; Peter Johanson <latexer@gentoo.org>
  +files/muine-0.8.2-autoconf.diff, +muine-0.8.2.ebuild:
  Bump.

*muine-0.6.3-r3 (16 Mar 2005)

  16 Mar 2005; <zaheerm@gentoo.org> +files/muine-0.6.3-libgstplay.diff,
  +muine-0.6.3-r3.ebuild:
  Fix bug in muine's gst engine that causes it not to work with recent 
  gst-plugins (#85017)

  14 Mar 2005; Peter Johanson <latexer@gentoo.org>
  +files/muine-0.6.3-gnome-2.10-compat.diff, -muine-0.6.3-r1.ebuild,
  muine-0.6.3-r2.ebuild:
  Remove one older version, fix deps to account for future SLOT of gtk-sharp-2.0
  stuff, and add a patch to fix compilation with libgnome-2.10 (See bug #83419).

  10 Mar 2005; Peter Johanson <latexer@gentoo.org> muine-0.6.3-r1.ebuild,
  muine-0.6.3-r2.ebuild:
  mono moved from dev-dotnet -> dev-lang

  22 Feb 2005; Peter Johanson <latexer@gentoo.org> muine-0.6.3-r2.ebuild,
  -muine-0.6.3.ebuild:
  Fix deps for broken out gtk-sharp deps. See bug #82963. Remove one older
  version.
