@@ -1,14 +1,14 @@
 MD5 efc18f554d45025127675ee4601d23e8 muine-0.6.3-r2.ebuild 1642
+MD5 61017a0b991d615fea6cef66430030ca muine-0.8.3.ebuild 2697
 MD5 49f354dc1e312093cd9012b8933da075 muine-0.6.3-r3.ebuild 1751
 MD5 c757e976a7e572673f6daae730e69ecd muine-0.8.2.ebuild 2317
-MD5 29b5dc3d131a7848c54e7ea6d46a0dfe ChangeLog 2804
+MD5 474f527e7cdc47bcf76bd07f078d393c ChangeLog 2905
 MD5 42dcaa983276bbd8e849c07f13677337 metadata.xml 245
-MD5 1df5b08f91e7894629b1e95c9a7d8984 muine-0.8.3.ebuild 2701
 MD5 23905e3a18ad036ce42ccb76c81f1096 files/muine-0.6.3-mono-1.1.1-compat.diff 3384
 MD5 e8f743f78010f9e787d738c4dc2c3afa files/muine-0.6.3-gnome-2.10-compat.diff 846
 MD5 d5dc53fe5feabb06a5204e6e51934bc7 files/muine-0.8.2-autoconf.diff 1187
 MD5 04dd533ff9f9a635c7c6930759d8f1f6 files/digest-muine-0.8.2 63
+MD5 80e26562df326c5879e45ac707aa7923 files/digest-muine-0.8.3 63
 MD5 005546051d7ebbbbc94daf145d59b104 files/muine-0.6.3-libgstplay.diff 1412
 MD5 94649610e3e4a64b74b8e868c0b7d2ca files/digest-muine-0.6.3-r2 63
 MD5 94649610e3e4a64b74b8e868c0b7d2ca files/digest-muine-0.6.3-r3 63
-MD5 80e26562df326c5879e45ac707aa7923 files/digest-muine-0.8.3 63
