@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/muine
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/ChangeLog,v 1.18 2005/05/25 15:21:31 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/ChangeLog,v 1.19 2005/06/14 15:02:25 dsd Exp $
+
+  14 Jun 2005; Daniel Drake <dsd@gentoo.org> muine-0.8.3.ebuild:
+  Fix depdendencies on gtk-sharp-1.9.2
 
   25 May 2005; Peter Johanson <latexer@gentoo.org> muine-0.6.3-r2.ebuild,
   muine-0.6.3-r3.ebuild, muine-0.8.2.ebuild, muine-0.8.3.ebuild:
